# simplon_projet1_mlop

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/modules/: mon_module.py
docs/source/: conf.py
public/: .buildinfo.bak  genindex.html  index.html  mon_module.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: environment.pickle  index.doctree  mon_module.doctree
public/_modules/: index.html
public/_modules/modules/: mon_module.html
tests/: test_math_csv.py
